added edit receiving
